@startuml
'https://plantuml.com/class-diagram
class LedgerController{
copy_bills(receipt,table)
}
abstract Controller{

}
class Receipt{
seats:list [int]
billing: list[int]
total: int

print_receipt(printer, int, table)

}
class Table
class ReceiptController{
table: Table
make_bills()
update_receipt(seats, billing)
print_bills(printer, receipt)
cleanup(receipt)
check_total()

}

ReceiptController..>Controller
LedgerController..>Controller
ReceiptController->Table:table
Table --> Receipt: receipt

LedgerController-->Receipt:0... receipt

@enduml